Move my literature too and case change

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -17,8 +17,8 @@
 
 @Misc{newton_institute,
   key = 	 "newton",
-  howpublished = 	 "{Website : \url{http://www.newton.ac.uk/programmes/AMM/index.html}}",
-  title = "{Newton Institute Program : Multiscale Numerics for the Atmosphere and Ocean, August 22 - Dec. 21, 2012}"}
+  howpublished = 	 "{Website: \url{http://www.newton.ac.uk/programmes/AMM/index.html}}",
+  title = "{Newton Institute Program: Multiscale Numerics for the Atmosphere and Ocean, August 22 - Dec. 21, 2012}"}
 
 @Article{al-be-co-ma:1997,
   author = {A. S. Almgren and J. B. Bell and P. Colella and T. Marthaler},
@@ -148,7 +148,7 @@
   year =	 1998,
   volume =	 35,
   number =	 6,
-  pages =	 "2298--2316"
+  pages =	 "2298--2316",
   URL = "{\url{http://epubs.siam.org/sam-bin/dbq/article/31597}}",
 }
 
@@ -226,7 +226,7 @@
   author = 	 "M. Welcome and C. Rendleman and L. Oliker and R. Biswas",
   title = 	 "Performance Characteristics of an Adaptive Mesh Refinement
                   Calculation on Scalar and Vector Platforms",
-  booktitle =	 "CF '06 : Proceedings of the 3rd Conference on Computing Frontiers",
+  booktitle =	 "CF '06: Proceedings of the 3rd Conference on Computing Frontiers",
   pages =	 "393--402",
   year =	 2006,
   location = "Ischia, Italy",
@@ -303,7 +303,7 @@ incompressible {N}avier-{S}tokes equations in three dimensions",
 @Article{ma-ol-mo-de-pa:2000,
   author = 	 "Peter MacNeice and Kevin M. Olson and Clark Mobarry and
                      Rosalinda deFainchtein and Charles Packer",
-  title = 	 "{PARAMESH : A parallel adaptive mesh refinement community toolkit}",
+  title = 	 "{PARAMESH: A parallel adaptive mesh refinement community toolkit}",
   journal = 	 "Computer Physics Communications",
   year = 	 2000,
   volume = 	 126,
@@ -338,29 +338,29 @@ incompressible {N}avier-{S}tokes equations in three dimensions",
 
 @Misc{amrclaw,
   key = "amrclaw",
-  howpublished = "{AMRClaw website : \url{http://www.clawpack.org}}"
+  howpublished = "{AMRClaw website: \url{http://www.clawpack.org}}"
 }
 
 @Misc{paramesh,
   key = 	 "paramesh",
-  howpublished = "{PARAMESH website :
+  howpublished = "{PARAMESH website:
    \url{http://www.physics.drexel.edu/~olson/paramesh-doc/Users_manual/amr.html}}"
 }
 
 
 @misc{chombo,
   key = "chombo",
-  howpublished = "{Chombo website : \url{http://seesar.lbl.gov/anag/chombo}}"
+  howpublished = "{Chombo website: \url{http://seesar.lbl.gov/anag/chombo}}"
 }
 
 @Misc{samrai,
   key = "samrai",
-  howpublished = "{SAMRAI website : \url{http://www.llnl.gov/CASC/SAMRAI/}}",
+  howpublished = "{SAMRAI website: \url{http://www.llnl.gov/CASC/SAMRAI/}}",
   year = 	 2004}
 
 @Misc{ebchombo,
  key = "ebchombo",
-  howpublished = "{EBChombo website :
+  howpublished = "{EBChombo website:
   \url{http://seesar.lbl.gov/anag/chombo}}"
 }
 
