--- a/docs/parco13/abstract.tex
+++ b/docs/parco13/abstract.tex
@@ -22,6 +22,7 @@
 \usepackage{amsmath,amssymb}
 \usepackage{cite}
 \usepackage{color}
+\usepackage{url}
 \usepackage{xspace}
 
 \newcommand{\comment}[1]{\textcolor{green}{[DAC: #1]}\xspace}
@@ -272,6 +273,6 @@ by B.\ as part of a talk at the SCI Institute, Utah, in July 2011.
 
 %%%%%%%%%%% The bibliography starts:
 \bibliographystyle{unsrt}
-\bibliography{ccgo,../Biblio/amr}
+\bibliography{../biblio/ccgo,../biblio/amr}
 
 \end{document}
