--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -379,4 +379,13 @@ incompressible {N}avier-{S}tokes equations in three dimensions",
   timestamp = {2012.11.21}
 }
 
+@INPROCEEDINGS{Uintah,
+  title = {Uintah: a scalable framework for hazard analysis},
+  author = {M. Berzins and J. Luitjens and Q Meng and T. Harman and
+    C. A. Wight},
+  booktitle = {Proceedings of the 2010 TeraGrid Conference},
+  year = {2010}
+}
+
+
 %% ------------------------------ AMR Codes --------------------------------
