Update ccgo bib file

--- a/docs/parco13/abstract.tex
+++ b/docs/parco13/abstract.tex
@@ -124,7 +124,8 @@ identifies each octree leaf with a mesh element.  In our work, we go
 beyond the traditional high-order element and define each element to
 be a dense compute patch with $m^d$ DOFs.  In fact, this approach
 resembles block-structured AMR \cite{be-ol:1984, be-co:1989, be-le:1991,
-ColellaGravesKeenEtAl07,Uintah} except that the
+ColellaGravesKeenEtAl07,
+BerzinsLuitjensMengEtAl10} except that the
 patches are not overlapping, which enables us to capitalize on our
 previous experience with scalable FE solvers for PDEs
 \cite{BursteddeStadlerAlisicEtAl13}.  The Clawpack software
